tools/rust-parser/tests/fixtures/positive/header-binders.tree
\def\macro(x, ~y){body}
\def\empty(){body}
\fun(x, y){body}
\object(self){[render]{}}
\patch{\get\base}(self, super){[render]{ok}}
