tools/rust-parser/tests/fixtures/negative/invalid-patch-target.tree
\patch{plain}[self][super]{[render]{ok}}
